--- a/css/question.css
+++ b/css/question.css
@@ -36,15 +36,15 @@
 
 .timer {
   float: left;
-  position: relative;
-  right: -50%;
+  position: absolute;
+  right: 40px;
   color: white;
   background: #1c7c54;
 }
 
 .logo_conti {
   position: relative;
-  left: 35%;
+  left: calc(50% - 140px);
   align-self: auto;
   width: 280px;
   float: left;
@@ -55,7 +55,8 @@
     left: 0;
   }
   .timer {
-    left: 13%;
+    right: 10px;
+    width: 150px;
   }
 }
 
@@ -112,6 +113,20 @@
 
 .ques1 {
   padding: 6px;
+  display: table;
+  border: 2px;
+  border-bottom: 0;
+  border-style: solid;
+  border-color: white;
+  display: table;
+  width: calc(100% - 16px);
+
+  min-height: 50px;
+}
+
+.ques2 {
+  cursor: pointer;
+  padding: 6px;
 
   border: 2px;
   border-bottom: 0;
@@ -121,14 +136,15 @@
   width: calc(100% - 16px);
 
   min-height: 50px;
-  background: #8fb996;
+  background: #86c791;
 }
 
 .ques1:hover {
-  background: #709775;
+  background: #acdab2;
 }
 
 .ans1 {
+  padding: 20px;
   display: none;
   background: white;
   width: calc(100% - 4px);
@@ -146,4 +162,110 @@
   padding-left: 20px;
   line-height: 1.5em;
   font-size: 1.3em;
+}
+
+.questionno1 {
+  width: 12px;
+  height: 12px;
+  outline: 0;
+  margin-top: 20px;
+  margin-left: 13px;
+  margin-right: 13px;
+  margin-bottom: 20px;
+  text-align: center;
+  border-style: solid;
+  border-width: 2px;
+  border-color: grey;
+  cursor: pointer;
+}
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 19px;
+  font-family: "Times New Roman", Times, serif;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default radio button */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 15px;
+  width: 15px;
+  background-color: #cdcfd3;
+  border-radius: 50%;
+  margin-top: 3.5px;
+  margin-left: 3.5px;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: rgb(133, 128, 128);
+}
+
+/* When the radio button is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: #1c7c54;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.container .checkmark:after {
+  top: 4px;
+  left: 4px;
+  width: 7px;
+  height: 7px;
+
+  border-radius: 50%;
+  background: white;
+}
+
+button {
+  background-color: #4caf50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+.submit {
+  border-radius: 20px;
+  margin-top: 20px;
+  width: auto;
+  padding: 6px 13px;
+  background-color: #cf4f60;
+  width: 88px;
+}
+button:focus {
+  outline: 1;
+}
+.submit:hover {
+  background-color: #df7f78;
 }
