--- a/css/admin_login.css
+++ b/css/admin_login.css
@@ -6,17 +6,17 @@ a:nth-child(3):hover ~ .animation {
 }
 
 form {
-  background: #8380b6;
+  background: #94b6be;
 }
 
 .container {
   padding: 16px;
 
-  background: #8380b6;
+  background: #94b6be;
 }
 
 .conti {
-  background: #8380b6;
+  background: #94b6be;
 }
 
 button {
