--- a/css/home.css
+++ b/css/home.css
@@ -7,39 +7,39 @@
   vertical-align: middle;
 }
 .logo {
-  font-size: 2.5rem;
+  font-size: 25px;
+
+  font-weight: bold;
   font-family: "Times New Roman", Times, serif;
   display: inline-block;
   z-index: -1;
   float: left;
-  height: 50px;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  height: 40px;
   color: white;
   z-index: 1;
-  text-decoration: none;
-  text-transform: initial;
-  text-align: center;
+
   color: white;
 
   position: relative;
 
   margin-left: 10px;
   min-width: 150px;
-  vertical-align: center;
-  line-height: 50px;
 }
 nav {
   position: absolute;
-  width: 550px;
-  height: 50px;
-  left: calc(50% - 285px);
+  width: 450px;
+  height: 40px;
+  margin-top: 12px;
+  left: calc(50% - 225px);
   display: flex;
   vertical-align: center;
-  background-color: #87bba2;
+  background-color: #39424e;
   border-radius: 8px;
-  font-size: 0;
 }
 nav a {
-  line-height: 50px;
+  line-height: 40px;
   height: 100%;
   font-size: 15px;
   display: inline-block;
@@ -47,9 +47,11 @@ nav a {
   z-index: 1;
   text-decoration: none;
   text-transform: uppercase;
+
   text-align: center;
   color: white;
   cursor: pointer;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 nav .animation {
   position: absolute;
@@ -63,61 +65,51 @@ a:nth-child(1) {
   width: 100px;
 }
 a:nth-child(2) {
-  width: 100px;
-}
-a:nth-child(3) {
   width: 130px;
 }
-a:nth-child(4) {
+a:nth-child(3) {
   width: 115px;
 }
-a:nth-child(5) {
+a:nth-child(4) {
   width: 105px;
 }
+
 nav .start-home,
 a:nth-child(1):hover ~ .animation {
   width: 100px;
   left: 0;
-  background-color: #23395b;
+  background-color: #9863ee;
 }
 nav .start-about,
 a:nth-child(2):hover ~ .animation {
-  width: 100px;
+  width: 130px;
   left: 100px;
   background-color: #e74c3c;
 }
 nav .start-blog,
 a:nth-child(3):hover ~ .animation {
-  width: 130px;
-  left: 200px;
+  width: 115px;
+  left: 230px;
   background-color: #3498db;
 }
 nav .start-portefolio,
 a:nth-child(4):hover ~ .animation {
-  width: 115px;
-  left: 330px;
-  background-color: #9b59b6;
-}
-nav .start-contact,
-a:nth-child(5):hover ~ .animation {
   width: 105px;
-  left: 445px;
-  background-color: #e67e22;
+  left: 345px;
+  background-color: #4bca6b;
 }
 
 body {
   font-size: 12px;
   font-family: sans-serif;
-  background: #1c7c54;
+  background: #39424e;
 }
 
 .red {
   background: white;
 }
 .navi {
-  height: 50px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  height: 64px;
 }
 
 @media screen and (max-width: 1130px) {
