--- a/css/question.css
+++ b/css/question.css
@@ -1,28 +1,29 @@
 .sidebar {
-  background: #1c7c54;
+  background: #39424e;
   width: 67px;
-  height: 78vh;
+  height: 82vh;
   border-spacing: 0px;
   overflow-y: scroll;
   float: left;
   overflow-x: hidden;
   border-style: solid;
   box-sizing: border-box;
-  border-width: 4px;
+  border-width: 7.5px;
   border-color: white;
   border-left: 0;
   border-right: 0;
 }
 
 .logo {
-  padding-top: 23.5px;
   display: inline-block;
   float: none;
-  padding-bottom: 23.5px;
+
   margin-left: 0;
   width: 100%;
   align-items: center;
   z-index: 3;
+  padding-bottom: 12px;
+  padding-top: 12px;
 }
 
 .name {
@@ -36,17 +37,16 @@
 
 .timer {
   position: absolute;
-  top: 25px;
+  height: 40px;
   right: 40px;
   color: white;
-  background: #1c7c54;
+  background: #39424e;
 }
-
 .logo_conti {
   position: relative;
   left: calc(50% - 140px);
   align-self: auto;
-  width: 280px;
+  width: 200px;
   float: left;
 }
 
@@ -72,7 +72,7 @@
   margin: 12px;
   text-align: center;
   line-height: 24px;
-  background: #1c7c54;
+  background: #39424e;
   width: 24px;
   height: 24px;
   -webkit-border-radius: 12px;
@@ -85,7 +85,7 @@
 }
 .answindow {
   width: calc(100% - 67px);
-  height: 78vh;
+  height: 82vh;
   background: grey;
   float: left;
   overflow-y: scroll;
@@ -94,17 +94,27 @@
 }
 
 .question {
-  display: table-cell;
-  vertical-align: middle;
+  width: calc(100% - 55px);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 1.6em;
   outline: 0;
   padding: 5px;
+  min-height: 44px;
+  position: relative;
+  float: left;
+}
+.question p {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .ques1 {
   padding: 6px;
-  display: table;
+  display: inline-flex;
   border: 2px;
   border-bottom: 0;
   border-style: solid;
@@ -123,22 +133,22 @@
   border-bottom: 0;
   border-style: solid;
   border-color: white;
-  display: table;
+  display: inline-flex;
   width: calc(100% - 16px);
 
   min-height: 50px;
-  background: #86c791;
+  background: #9bc4bc;
 }
 
 .ques1:hover {
-  background: #acdab2;
+  background: #c7d3d1;
 }
 
 .ans1 {
-  padding: 20px;
+  padding: 6px;
   display: none;
   background: white;
-  width: calc(100% - 4px);
+  width: calc(100% - 16px);
 
   border: 2px;
   border-style: solid;
@@ -169,6 +179,8 @@
   border-color: grey;
   cursor: pointer;
   background: white;
+  display: block;
+  float: left;
 }
 .container {
   display: block;
@@ -241,10 +253,11 @@ button {
   background-color: #4caf50;
   color: white;
   padding: 14px 20px;
-  margin: 8px 0;
+  margin: 10px 0;
   border: none;
   cursor: pointer;
   width: 100%;
+  margin-top: 5px;
 }
 
 .submit {
@@ -252,6 +265,7 @@ button {
   margin-top: 20px;
   width: auto;
   padding: 6px 13px;
+  padding-top: 8px;
   background-color: #d64256;
   width: 88px;
 }
@@ -292,12 +306,12 @@ button:focus {
 }
 
 .red {
-  height: 78vh;
+  height: 82vh;
 }
 
 .fsubmit {
   border-radius: 20px;
-  margin-top: 10px;
+  margin-top: 12px;
   width: auto;
   padding: 6px 13px;
   background-color: white;
@@ -332,8 +346,8 @@ button:focus {
 .ins {
   display: inline-block;
   position: absolute;
-  top: 30.5px;
-  left: 30.5px;
+  left: 13px;
+  opacity: 0.9;
 }
 @media screen and (max-width: 810px) {
   .logo_conti {
