--- a/css/home.css
+++ b/css/home.css
@@ -9,13 +9,12 @@
 .logo {
   font-size: 25px;
 
-  font-weight: bold;
   font-family: "Times New Roman", Times, serif;
   display: inline-block;
   z-index: -1;
   float: left;
-  padding-top: 13px;
-  padding-bottom: 13px;
+  padding-top: 12px;
+  padding-bottom: 12px;
   height: 40px;
   color: white;
   z-index: 1;
@@ -26,6 +25,7 @@
 
   margin-left: 10px;
   min-width: 150px;
+  transition: opacity 0.3s;
 }
 nav {
   position: absolute;
@@ -112,8 +112,8 @@ body {
   height: 64px;
 }
 
-@media screen and (max-width: 1130px) {
+@media screen and (max-width: 850px) {
   .logo {
-    display: none;
+    opacity: 0;
   }
 }
